# ceres_solver_sample

./: .gitignore  CMakeLists.txt  build.sh
src/: CMakeLists.txt  angle_local_parameterization.h  bundle_adjustment.cpp  ceres_original_example.cpp  curve_fitting1.cpp  curve_fitting2.cpp  curve_fitting3.cpp  curve_fitting3d.cpp  curve_fitting_sample.cpp  intro1.cpp  intro2.cpp  matplotlib_sample.cpp  normalize_angle.h  pose_graph_2d_error_term.h  read_g2o.h  slam2d_example.cpp  types.h
